[package]
name = "salish"
version = "0.1.0-dev.1"
edition = "2021"
license = "MIT"
description = "Messaging Library"
homepage = "https://github.com/boondocklabs/salish"
repository = "https://github.com/boondocklabs/salish"
documentation = "https://docs.rs/salish"
readme = "README.md"

[dependencies]
#anylock = "0.1.0"
anylock = { path = "../anylock" }
colored = "2.1.0"
rayon = "1.10.0"
tracing = "0.1.40"
tracing-test = "0.2.5"

[dev-dependencies]
tracing-test = "0.2.5"
